# claude-squared-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
extension/: manifest.json  pyproject.toml
extension/server/: main.py
scripts/: build_and_install_extension.py  tail_pair.ps1
src/claude_squared/: __init__.py  __main__.py  _wait_script.py  agents.py  async_tasks.py  cli_paths.py  errors.py  models.py  registry.py  runtime.py  server.py  settings.py  transcript.py
src/claude_squared/adapters/: __init__.py  base.py  claude.py
tests/: smoke.py  smoke_crossproc_lock.py  smoke_listparse.py  smoke_log.py  smoke_runtime.py  smoke_streamjson.py  smoke_v05.py  smoke_v06.py  smoke_v08.py  smoke_v081.py  smoke_v094.py  smoke_v095.py  smoke_v096.py  smoke_v097.py  smoke_v098.py  smoke_v099.py
